shared/namespaces_and_serviceaccount.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pgc-core
---
apiVersion: v1
kind: Namespace
metadata:
  name: nodeservers
