shared/echoserver-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: echoserver
  namespace: nodeservers
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: echoserver
    spec:
      containers:
      - image: gcr.io/google_containers/echoserver:1.4
        imagePullPolicy: Always
        name: echoserver
        ports:
        - containerPort: 8080
