shared/nodeserver_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pythontemplate-0021b90202f2-1
  namespace: nodeservers
  labels:
    k8s-app: "pythontemplate-0021b90202f2-1"
    user: "54d81b8c8a0d2e362a58ed62"
    isy: "0021b90202f2"
    profileNum: "1"
spec:
  containers:
  - name: pythontemplate-0021b90202f2-1
    image: einstein42/pgc_nodeserver:python
    imagePullPolicy: Always
    resources:
      requests:
        cpu: 200m
        memory: 128Mi
      limits:
        cpu: 500m
        memory: 384Mi
  restartPolicy: Never
  terminationGracePeriodSeconds: 10
